# data-ai

./: README.md  pyproject.toml  requirements.txt
examples/multi_db/: README.md  docker-compose.yaml  load_data.py  requirements.txt
src/: constants.py  helper.py  main.py
src/agents/: __init__.py  __int__.py  agent.py  base.py  knowledge.py  promt.py  semantic_agent.py  team.py
src/config/: __init__.py  app_config.py  db.py
src/db/: __init__.py  bigquery.py  clickhouse.py  mongodb.py  mysql.py  pg.py
src/store/: __init__.py  app.py
